# CooperativeDriving

./: .gitignore  CTIS.rc  Makefile  README.md  a.sh  ctisCarTool.pro  data_version.py  img.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mythread.cpp  mythread.h  reset.sh
AdrcPidControl/: CMakeLists.txt
AdrcPidControl/include/: ADRC.h  FuzzyPID.h  lat_controller.hpp
AdrcPidControl/src/: ADRC.cpp  control_sender.cpp
GPS/IMU/: gps_gtimu.cpp
WireControlCAN/: CanReceive.cpp  TurnSteerBack.cpp  canStruct.hpp
backup/: CanReceive.cpp  canbus_reader.cpp
backup/CANBUS/src/: CanReceive.cpp
backup/ControlVehicle/src/: TurnSteerBack.cpp  canStruct.cpp  control.cpp
backup/control/include/: steering_control.hpp
backup/control/src/: msg_receive.cpp
backup/gps/src/: gps_gpfpd.cpp  gps_gtimu.cpp  gps_read.cpp  localization_main_fake.cpp  readDemo1.cpp  readDemo2.cpp
canbus/: CMakeLists.txt  CanReceive.cpp  canbus_main.cpp  canbus_reader.cpp  canbus_reader.hpp  package.xml  steering_report.hpp
canbus/include/: .canbus_reader.hpp.swp  canbus_reader.hpp  chassis_report.hpp
canbus/launch/: canbus.launch  main.launch
canbus/msg/: can.msg  frame.msg
canbus/src/: canbus_main.cpp  canbus_reader.cpp
canread/: can_reader.cpp  can_reader.hpp  chassis_report.hpp  compile.sh
control/: CMakeLists.txt  control_main_fake.cpp  control_sender.cpp  steering_control.hpp  steering_control_sender.cpp  steering_control_sender.hpp
control/include/: control_sender.hpp  lat_controller.hpp  math_utils.hpp  msg_receive.hpp  steering_control.hpp  vehicle_info.hpp
control/launch/: control.launch
control/src/: control_main.cpp  control_sender.cpp  lat_controller.cpp  lon_controller.cpp  math_utils.cpp  pid_controller.cpp
controller/AdrcPidControl/: CMakeLists.txt  package.xml
controller/AdrcPidControl/include/: .steering_control.hpp.swo  .steering_control.hpp.swp
controller/AdrcPidControl/src/: .lat_controller.cpp.swo  lat_controller.cpp  lon_controller.cpp
controller/PdPidControl/include/: control_by_wire.hpp  lon_controller.hpp
controller/PdPidControl/src/: control_main.cpp  control_sender.cpp  pid_controller.cpp
devel/: _setup_util.py  local_setup.sh  setup.sh
devel/include/algorithm/: algorithm.h
devel/include/canbus/: frame.h
devel/include/localization/: gps.h
devel/lib/AdrcPidControl/: _AdrcPidControl
devel/lib/canbus/: _canbus
devel/lib/control/: _control
devel/lib/localization/: _localization
devel/lib/pkgconfig/: AdrcPidControl.pc  algorithm.pc  canbus.pc  control.pc  localization.pc
devel/lib/python2.7/dist-packages/algorithm/msg/: __init__.py  _algorithm.py
devel/lib/python2.7/dist-packages/canbus/msg/: _frame.py
devel/lib/python2.7/dist-packages/localization/msg/: _gps.py
devel/share/AdrcPidControl/cmake/: AdrcPidControlConfig.cmake
devel/share/algorithm/cmake/: algorithm-msg-extras.cmake  algorithm-msg-paths.cmake  algorithmConfig.cmake
devel/share/canbus/cmake/: canbus-msg-extras.cmake  canbus-msg-paths.cmake  canbusConfig.cmake
devel/share/common-lisp/ros/algorithm/msg/: _package.lisp  _package_algorithm.lisp  algorithm-msg.asd  algorithm.lisp
devel/share/common-lisp/ros/canbus/msg/: _package.lisp  _package_frame.lisp  canbus-msg.asd  frame.lisp
devel/share/common-lisp/ros/localization/msg/: _package.lisp  _package_gps.lisp  gps.lisp  localization-msg.asd
devel/share/control/cmake/: controlConfig.cmake
devel/share/gennodejs/ros/algorithm/msg/: _index.js  algorithm.js
devel/share/gennodejs/ros/canbus/msg/: _index.js  frame.js
devel/share/gennodejs/ros/localization/msg/: gps.js
devel/share/localization/cmake/: localization-msg-extras.cmake  localization-msg-paths.cmake  localizationConfig.cmake
devel/share/roseus/ros/algorithm/: manifest.l
devel/share/roseus/ros/algorithm/msg/: algorithm.l
devel/share/roseus/ros/canbus/: manifest.l
devel/share/roseus/ros/canbus/msg/: frame.l
devel/share/roseus/ros/localization/: manifest.l
devel/share/roseus/ros/localization/msg/: gps.l
docker/: dockerfile  make_container.sh  start_container.sh
launcher/: CMakeLists.txt  package.xml
launcher/launch/: start_drive.launch
localization/: CMakeLists.txt  gps_gpfpd.cpp  package.xml
localization/include/: gps_read.hpp  gps_report.hpp
localization/launch/: localization.launch
localization/msg/: gps.msg
localization/src/: gps_read.cpp  localization_main.cpp  localization_main_sigthread.cpp  location_main.cpp
log/: log1.csv  rosoutput.txt
perception/: CMakeLists.txt  package.xml
perception/include/: chassis_report.hpp  perception_reader.hpp
perception/launch/: perception.launch
perception/msg/: frame.msg  object_frame.msg  object_frame_station.msg
perception/src/: perception_main.cpp  perception_reader.cpp
src/AdrcPidControl/src/: .lat_controller.cpp.swp  FuzzyPID.cpp
src/canbus/include/: steering_report.hpp
src/control/: CMakeLists.txt  package.xml
src/control/include/: control_sender.hpp  lat_controller.hpp  pid_controller.hpp
src/control/src/: .control_sender.cpp.swp  lat_controller.cpp
src/drivers/canbus/launch/: main.launch
src/drivers/localization/include/: gps_report.hpp
src/tools/: BitSetCvt.cpp
tools/: data_version.py  reset_usbhub.sh
